[tool.poetry]
name = "hcubed"
version = "1.0.0"
description = "A random personal bot"
authors = ["vcokltfre <vcokltfre@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git", rev = "feae059c6858e419552ec4096f1ad2692bb4c484"}
python-dotenv = "^0.15.0"
loguru = "^0.5.3"
jishaku = "^1.20.0"
asyncpg = "^0.22.0"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
GitPython = "^3.1.14"
parsedatetime = "^2.6"
shavatar = "^1.0.0"
aiocertstream = "^0.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.11.1"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
